--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,10 @@ repositories {
 }
 
 dependencies {
+	// web
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 
 	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //
@@ -29,13 +31,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.security:spring-security-config:6.4.2'
 
+	// jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
-	// springdata R2DBC for oracle
+	// R2DBC for oracle
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	implementation 'com.oracle.database.r2dbc:oracle-r2dbc:1.0.0'
+	implementation 'com.oracle.database.r2dbc:oracle-r2dbc:1.1.0'
+	implementation 'io.r2dbc:r2dbc-pool:1.0.0.RELEASE'
+	implementation 'io.r2dbc:r2dbc-spi:1.0.0.RELEASE'
 
 	// Liquibase for Database Migrations
 	implementation 'org.liquibase:liquibase-core'
