--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 
 	// thymeleaf
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' //
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
 
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.2'
